--- a/Languages/ChineseSimplified/Keyed/Keys.xml
+++ b/Languages/ChineseSimplified/Keyed/Keys.xml
@@ -1,6 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
-
   <!-- Stats -->
   <!--EN: Damage per burst-->
   <M4_DamagePerBurst>单发伤害</M4_DamagePerBurst>
@@ -14,20 +13,16 @@
   <M4_ProjectileTravelTime>空中飞行时间</M4_ProjectileTravelTime>
   <!--EN: Explosion delay-->
   <M4_ProjectileExplosionDelay>爆炸延时</M4_ProjectileExplosionDelay>
-
   <!-- StatParts -->
   <!--EN: Timetabled for {0}-->
   <M4_StatPart_TimeTable_ExplanationString>时刻表的安排为 {0}</M4_StatPart_TimeTable_ExplanationString>
-
   <!-- Settings -->
   <!--EN: Greyed out settings are ignored-->
   <M4_GreySettingsIgnored>灰色的设置不会生效</M4_GreySettingsIgnored>
-
   <!--EN: Bring back big herd migrations-->
   <M4_SettingBigAnimalMigrations>大型动物迁徙回归</M4_SettingBigAnimalMigrations>
   <!--EN: With this setting enabled, expect herd migrations to contain between 30 and 50 animals, regardless of bodysize.-->
   <M4_SettingBigAnimalMigrations_Desc>如该选项启用，则兽群迁徙事件将包含30至50头动物，无关体型大小。</M4_SettingBigAnimalMigrations_Desc>
-
   <!--EN: Modify the Auto Undrafter-->
   <M4_SettingModifyAutoUndrafter>修改自动解除征召设置</M4_SettingModifyAutoUndrafter>
   <!--EN: Various options for lengthening the time it takes for a colonist to undraft themselves.-->
@@ -44,12 +39,10 @@
   <M4_SettingLowMoodUndraft>……但在发生以下事件时解除征召(由上到下分别为低、中、高崩溃风险)：</M4_SettingLowMoodUndraft>
   <!--EN: Allow the regular AutoUndrafter to kick in when colonists are at low mood.-->
   <M4_SettingLowMoodUndraft_Desc>当殖民者符合以下崩溃风险时解除征召。</M4_SettingLowMoodUndraft_Desc>
-
   <!--EN: Allow large manhunter packs?-->
   <M4_SettingEnableLargePacks>允许超大型猎杀人类动物事件?</M4_SettingEnableLargePacks>
   <!--EN: By default, RimWorld stops sending manhunter packs at high raid points. This changes that.-->
   <M4_SettingLargePack_Desc>默认情况下，当入侵点数较高时，游戏内将不会出现动物猎杀人类事件。勾选本项以启用该事件。</M4_SettingLargePack_Desc>
-
   <!--EN: Change the threshold at which raids flee-->
   <M4_SettingVariableRaidRetreat>更改触发敌人逃跑的损员比例</M4_SettingVariableRaidRetreat>
   <!--EN: By default, raiders give up at 50% losses. This allows you to change it. Does not apply to mechanoids and other factions which don't flee.-->
@@ -60,27 +53,22 @@
   <M4_SettingRandomRaidRetreat_Desc>敌人会在损员 {0} 到 {1} （在当中随机抽取一个数值）后逃跑。</M4_SettingRandomRaidRetreat_Desc>
   <!--EN: Flee when this many raiders have died:-->
   <M4_SettingRetreatAtPercentageDefeated>当敌人损员该比例后逃跑:</M4_SettingRetreatAtPercentageDefeated>
-
   <!--EN: Harvested product-->
   <M4_HarvestYieldThing>收获物</M4_HarvestYieldThing>
   <!--EN: What this plant yields when harvested by a colonist. Information about {0} is as follows...-->
   <M4_HarvestYieldThingDetailInit>殖民者收获该植物时的产出物。{0} 的信息如下：</M4_HarvestYieldThingDetailInit>
-
   <!--EN: Disable pacifists during rolling-->
   <M4_TutorialStyleRolling>随机抽取人物时不会抽到非暴力角色</M4_TutorialStyleRolling>
   <!--EN: If this is enabled, non-violents will be removed from the available colonist pool during the starting screen. That means you'll never roll Emmie the Sex Slave, or Roughchild the Reporter-->
   <M4_TutorialStyleRolling_Desc>若启用该项，则在“创建角色”界面你不会随机到无暴力能力的殖民者。这意味着你永远不会抽到Emmie the Sex Slave或Roughchild the Reporter。</M4_TutorialStyleRolling_Desc>
-
   <!--EN: Tell me about every dead colony animal!-->
   <M4_NotifyDeadAnimals>通知殖民地每只动物的死亡！</M4_NotifyDeadAnimals>
   <!--EN: When disabled, this removes the Death notification message for colony animals. This includes bonded animals.-->
   <M4_NotifyDeadAnimals_Desc>禁用此项将屏蔽所有殖民地动物的死亡通知。羁绊动物也不例外。</M4_NotifyDeadAnimals_Desc>
-
   <!--EN: Human filth rate-->
   <M4_LessLitterLouting>人类污物产生速度</M4_LessLitterLouting>
   <!--EN: How much filth and trash a human produces per 1000 cells. Default value is 5.-->
   <M4_LessLitterLouting_Desc>人类每行走1000步产生的污物数量。默认数值为5。</M4_LessLitterLouting_Desc>
-
   <!--EN: Animals marked for taming aren't tasty to your guarding predators-->
   <M4_GuardingPredatorsDontHuntTameDesignatedPawns>你的护卫用捕食者不会去捕猎你正试图驯服的动物</M4_GuardingPredatorsDontHuntTameDesignatedPawns>
   <!--EN: When enabled, any tame predator that is guard-trained will defer hunting any wild animals that are designated to be tamed.-->
@@ -91,32 +79,41 @@
   <M4_AnimalInteractionHourLimit_Desc>被指派“驯兽”工作的殖民者会在每天此时间后停止驯服动物的工作，以防驯服途中动物睡着、白白浪费粮食。将时间设为24时会将本选项完全禁用（适用于Nocturnal Animals夜行性动物mod）。</M4_AnimalInteractionHourLimit_Desc>
   <!--EN: animal will fall asleep soon-->
   <M4_CantInteractAnimalWillFallAsleepSoon>动物快要睡觉了</M4_CantInteractAnimalWillFallAsleepSoon>
-
   <!--EN: Timetable assignment matters more-->
   <M4_TimetableAssignmentMatters>时刻表的作用变得更加强大</M4_TimetableAssignmentMatters>
   <!--EN: Colonists' timetable assignments will affect their global work speed stats.-->
   <M4_TimetableAssignmentMatters_Desc>殖民者时刻表中不同的时间段会影响他们的全局工作速度。\n\n译者注：当时刻表内安排为“工作”时，殖民者的工作效率会提升。</M4_TimetableAssignmentMatters_Desc>
-
   <!--EN: Better hostile readouts-->
   <M4_BetterHostileReadouts>查看敌军信息变得更方便</M4_BetterHostileReadouts>
   <!--EN: Chased refugee letters will show an overall head count for the pursuing group and non-human threats will have labels underneath them to make it easier to find them - no more ninja mechanoids!-->
   <M4_BetterHostileReadouts_Desc>“被追捕的逃生者”信息窗中会显示完整的追捕者人数，并且非人类的敌对单位下方都会有一个标签，让你更容易找到他们——不会再有神出鬼没的机械族了！</M4_BetterHostileReadouts_Desc>
-
   <!--EN: Display ranged DPS-->
   <M4_DisplayRangedDPS>显示远程DPS</M4_DisplayRangedDPS>
   <!--EN: Ranged weapons and pawns will show their ranged DPS at close, short, medium and long distances. Advisable to disable if running Combat Extended.-->
   <M4_DisplayRangedDPS_Desc>具备远程攻击能力的武器和小人在其面板会分别显示贴身、近、中、远的DPS数据。若你使用战斗拓展(Combat Extended)则最好关闭该选项。</M4_DisplayRangedDPS_Desc>
-
   <!--EN: Add info button to filters-->
   <M4_ThingFilterInfoCards>在物品筛选界面添加信息查看按钮</M4_ThingFilterInfoCards>
   <!--EN: When viewing stockpile filters or configuring recipe ingredients, there will be a clickable i to bring up that item's info card.-->
   <M4_ThingFilterInfoCards_Desc>勾选此项后，在你查看储存区物品筛选界面或设定清单材料时，点击物品旁的“i”标志，可查看物品的详细信息。</M4_ThingFilterInfoCards_Desc>
-
   <!--EN: Paste dispenser needs space-->
   <M4_NPDNeedsSpace>营养膏合成机使用受阻</M4_NPDNeedsSpace>
   <!--EN: One of your nutrient paste dispensers has its interaction cell blocked by an obstruction that will prevent colonists from using it.\n\nA nutrient paste dispenser needs an unblocked interaction cell to be usable.-->
   <M4_NPDNeedsSpace_Desc>某台营养膏合成机的取餐点被物体封住，这会导致你的殖民者无法正常使用它。\n\n营养膏合成机需要解禁取餐点才能正常运作。</M4_NPDNeedsSpace_Desc>
-
   <!--EN: Currently viewed colonist is not selected for landing. Are you sure you wish to embark without {0}?-->
   <M4_HaveNotDraggedColonist>当前所查看的人物尚未被拖拽至初始殖民者列表。真的不想将 {0} 用作初始殖民者吗？</M4_HaveNotDraggedColonist>
+  <!--The following translations were generated by https://www.deepl.com/-->
+  <M4_MinorBreakRisk>轻微断裂风险</M4_MinorBreakRisk>
+  <M4_MajorBreakRisk>重大断裂风险</M4_MajorBreakRisk>
+  <M4_ExtremeBreakRisk>极端断裂风险</M4_ExtremeBreakRisk>
+  <M4_ImAModder>我是一名修改者</M4_ImAModder>
+  <M4_ImAModderTT>移除工作坊提交的 6 秒冷却时间，解锁特殊选项。</M4_ImAModderTT>
+  <M4_DevInfo>开发模式产卵调整[未保存。 重启后设置将被清除]。</M4_DevInfo>
+  <M4_ChooseStuff>选择项目内容</M4_ChooseStuff>
+  <M4_StuffName>东西 defName（空白 = 默认东西）</M4_StuffName>
+  <M4_ForceQuality>强制项目质量</M4_ForceQuality>
+  <M4_ItemQuality>项目质量</M4_ItemQuality>
+  <M4_Reset>重置</M4_Reset>
+  <M4_CurrentModVersion>已安装模块版本：{0}</M4_CurrentModVersion>
+  <M4_SettingRandomRaidRetreat>按随机值逃跑？</M4_SettingRandomRaidRetreat>
+  <M4_LoverWarning>{0} 没有被分配到有两个床位的床铺 - 不能分配他们与伴侣同睡</M4_LoverWarning>
 </LanguageData>
